--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,120 @@
-.App {
-  text-align: center;
+body{
+  margin: 0;
+  background-image: linear-gradient(rgba(0,0,0,.3),rgba(0,0,0,.418)),url(https://hungry-banach-4bc059.netlify.app/static/media/weather_bg.80e19d92.jpg);
+  /* display: -webkit-flex; */
+  /* background-position: center; */
+  background-size: cover;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
+  height: 100vh;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form-container{
+  flex-direction: column;
+  background-color:#fff;
+  height: 100%;
+  width: 70%;
+  padding-top: 10px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 25px;
+  margin: auto;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.head{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+}
+h2{
+  font-family: 'elmessiri-bold'; 
+  font-size: 27px;
+}
+.color{
+  color: #06d6cc;
+}
+.cloud{
+  width: 150px;
+  align-self: center;
 }
 
-.App-link {
-  color: #61dafb;
+/***** Form *****/
+form{
+  display: flex;
+  flex-direction: row;
 }
+input[type="text"] {
+  background-color: transparent;
+  border: 0;
+  border-bottom: solid 1px rgb(0, 0, 0);
+  width: 100%;
+  display: block;
+  padding-bottom: 4px;
+  color: rgb(73, 73, 73) !important;
+  font-weight: lighter;
+  letter-spacing: 2px;
+  font-size: 20px;
+  outline: none;
+}
+.submit{
+  border: 0;
+  padding: 8px 20px;
+  border-radius: 2px;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  font-size: 15px;
+  cursor: pointer;
+  font-weight: 100;
+  background-color: #068dd6;
+  color: #fff; 
+}
+.submit:hover {
+  color: #068dd6;
+  background-color: #fff;
+  border: 2px solid #068dd6;
+  border-radius: 5px;
+}
+.submit:active{
+  outline: none;
+} 
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/****** info weather *****/
+.info{
+  width: 100%;
+  letter-spacing: 2px;
+  font-size: 20px;
+  font-weight: 600;
+}
+.city{
+  font-weight: 600;
+  color: rgb(0, 0, 0);
+  text-align: center;
+}
+.info_key{
+  border-bottom: 2px solid rgb(255, 255, 255, 0.06);
+  font-weight: 400;
+  color: rgb(0, 0, 0);
+  display: flex;
+  
+}
+.info_key:last-child{
+  border: 0;
+}
+.img2{
+  margin-right: 15px;
+}
+.loc{
+  width: 24px;
+}
+.info_value{
+  font-weight: 200;
+  color: rgb(0, 0, 0);
+  display: flex;
+  flex-direction: column;
+}
+.error{
+  font-weight: 400;
+  color: red ;
+  text-align: center;
 }
